--- a/activityPrediction2.Rmd
+++ b/activityPrediction2.Rmd
@@ -3,8 +3,9 @@ title: "Exercise Manner Prediction"
 author: "Hugo Barros"
 date: "November 19, 2017"
 output:
-  pdf_document: default
+  md_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
